module(
  name = "oci",
  version = "1.0",
  compatibility_level = 1,
)

bazel_dep(name = "rules_oci", version = "1.2.0")
bazel_dep(name = "aspect_rules_js", version = "1.30.0")
bazel_dep(name = "aspect_rules_ts", version = "1.4.5")
bazel_dep(name = "aspect_rules_swc", version = "1.0.1")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "aspect_bazel_lib", version = "1.33.0")

################################################################################
# rules_js
################################################################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc"
)

use_repo(npm, "npm")

################################################################################
# rules_ts
################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

################################################################################
# rules_oci
################################################################################

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "debian",
    # tag = "latest",
    digest = "sha256:9f76a008888da28c6490bedf7bdaa919bac9b2be827afd58d6eb1b916e1e5918",
    image = "debian",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
        "linux/arm64/v7",
    ]
)

use_repo(oci, "debian")
