module(
  name = "oci",
  version = "1.0",
  compatibility_level = 1,
)

bazel_dep(name = "rules_oci", version = "1.3.1")
bazel_dep(name = "aspect_rules_js", version = "1.30.0")
bazel_dep(name = "aspect_rules_ts", version = "1.4.5")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "aspect_bazel_lib", version = "1.33.0")

################################################################################
# rules_js
################################################################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npmrc = "//:.npmrc"
)

use_repo(npm, "npm")

################################################################################
# rules_ts
################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

################################################################################
# rules_oci
################################################################################

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "debian",
    digest = "sha256:3d868b5eb908155f3784317b3dda2941df87bbbbaa4608f84881de66d9bb297b",
    image = "debian",
    platforms = [
        "linux/386",
        "linux/amd64",
        "linux/arm/v5",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/mips64le",
        "linux/ppc64le",
        "linux/s390x",
    ]
)

use_repo(oci, "debian")
